--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-pylint = "*"
+autopep8 = "*"
 
 [packages]
 flask = "*"
@@ -14,6 +14,7 @@ mongoengine = "*"
 pandas = "*"
 pytest = "*"
 beautifulsoup4 = "*"
+requests = "*"
 
 [requires]
 python_version = "3.7"
